--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,11 @@ import Section from "../components/Section.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import type { INavigation } from "../types/navigation";
+import "@fontsource-variable/montserrat";
+import "@fontsource-variable/fira-code";
+import "@fontsource-variable/source-code-pro";
+import "@fontsource/roboto";
+import "~styles/GlobalStyling.scss";
 
 const pages = await getCollection("pages");
 
@@ -38,9 +43,47 @@ const navigationFooter = navigation.filter((nav) =>
 </Layout>
 
 <style lang="scss">
+  @use "../styles/GlobalStyling";
   main {
+    position: relative;
+    scroll-behavior: smooth;
     padding-top: 50px;
     display: flex;
     flex-direction: column;
   }
 </style>
+
+<!--
+<script>
+  const setFavicon = () => {
+    const favicon = document.querySelector('link[rel="
+  icon"]');
+  favicon.href='window.matchMedia("(prefers-color-scheme:'
+  dark)").matches
+  ?
+  "dark-mode-favicon.png"
+  :
+  "light-mode-favicon.png";
+  };
+  Set
+  the
+  initial
+  favicon
+  setFavicon();
+  Listen
+  for
+  changes
+  in
+  the
+  color
+  scheme
+  preference
+  window
+  .matchMedia("(prefers-color-scheme:
+  dark)")
+  .addEventListener("change",
+  setFavicon);
+  <
+  script
+>
+  -->
