--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -1,10 +1,19 @@
-@import './Breakpoints';
-@import './Colors';
-@import './Fonts';
-@Import 'Grid';
+@import 'Breakpoints';
+@import 'Colors';
+@import 'Fonts';
+@import "Scrollbar";
 
 html {
   font-size: 100%;
+  position: relative;
+  scroll-behavior: smooth;
+}
+
+body {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 a {
