--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -2,7 +2,7 @@ $primary-color: #818a6e;
 $primary-light: #009E6D;
 $primary-dark: #2e86c1;
 
-$secondary-color: #0064A1; // Red
+$secondary-color: #0064A1;
 $secondary-light: #0076A7;
 $secondary-dark: #cb4335;
 
