--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,9 +1,8 @@
 ---
----
-<div>
-    Eckwerk Stuttgart
-    Stierlenstraße 25
-    70327 Stuttgart
 
-    Mail: hallo@eckwerkstuttgart.de
+---
+
+<div>
+  Eckwerk Stuttgart Stierlenstraße 25 70327 Stuttgart Mail:
+  hallo@eckwerkstuttgart.de
 </div>
