--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -14,9 +14,10 @@ const { Content } = await page.render();
 </section>
 
 <style lang="scss">
+  @import "./../styles/GlobalStyling";
+
   section {
     width: 100%;
-    height: 100%;
-    padding-top: 50px;
+    min-height: 100vh;
   }
 </style>
