--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -18,11 +18,12 @@ const { navigation } = Astro.props;
 </footer>
 
 <style lang="scss">
+  @import "./../styles/GlobalStyling";
+
   footer {
     bottom: 0;
     width: 100%;
     height: 50px;
-    position: fixed;
     background-color: #333;
     color: white;
   }
