--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -1,35 +1,7 @@
-$primary-color: #818a6e;
-$primary-light: #009E6D;
-$primary-dark: #2e86c1;
-
-$secondary-color: #0064A1;
-$secondary-light: #0076A7;
-$secondary-dark: #cb4335;
-
-$white: #ffffff;
-$black: #000000;
-$gray-light: #ecf0f1;
-$gray: #bdc3c7;
-$gray-dark: #95a5a6;
-
-$accent-color: #009389; // Yellow
-$accent-light: #00869E;
-$accent-dark: #0053B5;
-
-$text-color: #2c3e50; // Dark Gray
-$text-light: #7f8c8d; // Light Gray
-
-$background-color: #ecf0f1; // Light Gray
-$background-dark: #bdc3c7; // Darker Gray
-
-$border-color: #dcdcdc; // Light Border
-$border-dark: #a5a5a5; // Dark Border
-
-$success-color: #28a745; // Green
-$warning-color: #ffc107; // Yellow
-$danger-color: #dc3545; // Red
-$info-color: #17a2b8; // Cyan
-
-// Link Colors
-$link-color: #2980b9; // Blue
-//$link-hover-color: darken($link-color, 10%);
+$color-primary: #828B6F;
+$color-secondary: #DBA507;
+$color-accent: #8EC7D2;
+$color-dark: #0D6986;
+$color-darker: #07485B;
+$color-white: #fafafa;
+$color-black: #090909;
