--- a/src/styles/Fonts.scss
+++ b/src/styles/Fonts.scss
@@ -1,21 +1,23 @@
 @import "Breakpoints";
+@import "Colors";
 
 body {
+  background-color: var($color-white);
   font-size: 1rem;
   font-family: 'Roboto', sans-serif;
-  font-weight: 300;
+  font-weight: 100;
   line-height: 1.6;
 
   @include min-width('l') {
-    font-size: 1rem;
+    font-size: 1.25rem;
   }
 
   @include min-width('xl') {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 
   @include min-width('xxl') {
-    font-size: 1.75rem;
+    font-size: 1.25rem;
   }
 }
 
