--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -2,18 +2,12 @@
 @import 'Colors';
 @import 'Fonts';
 @import "Scrollbar";
+@import "Normalize";
 
 html {
   font-size: 100%;
   position: relative;
   scroll-behavior: smooth;
-}
-
-body {
-  height: 100%;
-  width: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 a {
