--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,7 +1,8 @@
 ---
-import type { INavigation } from "../types/navigation";
 import Navigation from "./Navigation.astro";
 import { Icon } from "astro-icon/components";
+import type { INavigation } from "../types/navigation";
+
 interface Props {
   navigation: INavigation[];
 }
@@ -10,25 +11,35 @@ const { navigation } = Astro.props;
 ---
 
 <header>
-  <Icon name="line-md:email" />
-  <div>Logo Eckwerk Stuttgart</div>
+  <Icon name="logo" />
   <Navigation navigation={navigation} navigationPostion="header" />
 </header>
 
 <style lang="scss">
-  @import "../styles/Colors";
+  @import "./../styles/GlobalStyling";
 
   header {
-    width: 100%;
-    height: 54px;
     position: fixed;
-    background-color: $primary-color;
+    background-color: $color-primary;
+    height: 40px;
+    width: calc(100% - 40px);
     z-index: 100;
-    display: flex;
-    justify-content: space-between;
 
-    div {
-      width: 300px;
+    @include min-width("l") {
+      display: flex;
+      justify-content: space-between;
+      width: calc(100% - 40px);
+      align-items: center;
+      font-size: 1rem;
+      height: 140px;
+      padding-left: 20px;
+      padding-right: 20px;
+    }
+
+    [data-icon] {
+      @include min-width("l") {
+          font-size: 4rem;
+      }
     }
   }
 </style>
