--- a/src/styles/Colors.scss
+++ b/src/styles/Colors.scss
@@ -1,7 +1,26 @@
 $color-primary: #828B6F;
 $color-secondary: #DBA507;
-$color-accent: #8EC7D2;
+
+$color-accent-1: #8EC7D2;
+$color-accent-2: #42AFBF;
+$color-accent-3: #FF7180;
+
 $color-dark: #0D6986;
 $color-darker: #07485B;
+
 $color-white: #fafafa;
 $color-black: #090909;
+
+// List of gray colors
+$color-gray-1: #c0c0c0;
+$color-gray-2: #b0b0b0;
+$color-gray-3: #a0a0a0;
+$color-gray-4: #909090;
+$color-gray-5: #808080;
+$color-gray-6: #707070;
+$color-gray-7: #606060;
+$color-gray-8: #505050;
+$color-gray-9: #404040;
+$color-gray-10: #303030;
+
+
