--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -21,7 +21,7 @@ const { Content } = await page.render();
     min-height: 100vh;
 
     @include min-width("l") {
-      padding-top: 90px;
+      margin-top: 90px;
     }
   }
 </style>
