--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,3 +20,14 @@ const { title } = Astro.props;
     <slot />
   </body>
 </html>
+
+<!--<script>
+  const setFavicon = () => {
+    const favicon = document.querySelector('link[rel="icon"]');
+    const isDarkMode = window.matchMedia("(prefers-color-scheme: dark)").matches;
+    favicon.href = isDarkMode ? "dark-mode-favicon.png" : "light-mode-favicon.png";
+  };
+
+  setFavicon();
+  window.matchMedia("(prefers-color-scheme: dark)").addEventListener("change", setFavicon);
+</script>-->
