Add generall stylings

--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -4,5 +4,6 @@
 
 <div>
   Eckwerk Stuttgart Stierlenstraße 25 70327 Stuttgart Mail:
-  hallo@eckwerkstuttgart.de
+
+  <a href="mailto:hallo@eckwerkstuttgart.de">hallo@eckwerkstuttgart.de</a>
 </div>
