--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -21,10 +21,12 @@ const { navigation } = Astro.props;
   @import "./../styles/GlobalStyling";
 
   footer {
+    display: flex;
+    flex-direction: row;
     bottom: 0;
     width: 100%;
-    height: 50px;
-    background-color: #333;
+    background-color: $color-primary;
     color: white;
+    padding: $spacing-s $spacing-xxl ;
   }
 </style>
