--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,7 +22,6 @@ const { navigation } = Astro.props;
     position: fixed;
     background-color: $color-primary;
     height: 40px;
-    width: calc(100% - 40px);
     z-index: 100;
 
     @include min-width("l") {
@@ -32,8 +31,8 @@ const { navigation } = Astro.props;
       align-items: center;
       font-size: 1rem;
       height: 90px;
-      padding-left: 50px;
-      padding-right: 50px;
+      padding-left: $spacing-xxl;
+      padding-right: $spacing-xxl;
     }
 
     [data-icon] {
