--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -128,23 +128,24 @@ const {navigationPostion} = Astro.props;
   .navbar {
     a {
       color: $color-white;
+      opacity: 0.5;
       text-decoration: none;
       text-transform: uppercase;
       font-family: Source Code Pro Variable, sans-serif;
       padding: $spacing-s;
+      border: 1px solid transparent;
+      transition: border 0.5s;
 
       &.active {
-        color: black;
+        opacity: 1;
       }
 
       &:hover {
-        color: $color-black;
-        background-color: lighten($color-white, 20%);
+        opacity: 0.75;
       }
 
       &:focus {
-        outline: none;
-
+        color: $color-accent-3;
       }
     }
   }
