--- a/src/styles/Fonts.scss
+++ b/src/styles/Fonts.scss
@@ -4,48 +4,102 @@
 body {
   background-color: var($color-white);
   font-size: 1rem;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-weight: 100;
+  letter-spacing: .6px;
   line-height: 1.6;
+
+
+  @include min-width('s') {
+    font-size: 1.15rem;
+  }
 
   @include min-width('l') {
     font-size: 1.25rem;
   }
 
   @include min-width('xl') {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   @include min-width('xxl') {
-    font-size: 1.25rem;
+    font-size: 1.30rem;
   }
 }
 
 h1 {
   font-family: 'Montserrat Variable', sans-serif;
+  font-weight: 200;
+
+  @include min-width('s') {
+    font-size: 2.75rem!important;
+  }
+
+  @include min-width('m') {
+    font-size: 2.75rem!important;
+  }
+
+  @include min-width('l') {
+    font-size: 3.25rem!important;
+  }
+
+  @include min-width('xl') {
+    font-size: 3.5rem!important;
+  }
+
+  @include min-width('xxl') {
+    font-size: 5rem!important;
+  }
 }
 
 h2 {
   font-family: 'Montserrat Variable', sans-serif;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 h3 {
   font-family: 'Montserrat Variable', sans-serif;
-  font-weight: 600;
+  font-weight: 400;
 }
 
 h4 {
-  font-family: 'Fira Code Variable', monospace;
-  font-weight: 700;
+  font-family: 'Source Code Pro Variable', monospace;
+  font-weight: normal;
 }
 
 h5 {
   font-family: 'Source Code Pro Variable', monospace;
-  font-weight: 800;
+  font-weight: normal;
 }
 
 p {
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
+  font-family: 'Source Sans Pro', sans-serif;
 }
+
+a {
+  color: $color-black;
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+em {
+  font-style: italic;
+}
+
+strong {
+  font-weight: bold;
+
+  em {
+    font-style: bold;
+    font-style: italic;
+  }
+}
+
+code {
+  font-family: 'Fira Code Variable', monospace;
+  color: $color-accent-3;
+}
+
