--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -5,14 +5,72 @@
 @import "Normalize";
 @import "Spacings";
 
-@mixin useBreakpoint($breakpoint) {
-  @media (min-width: map-get($breakpoints, $breakpoint)) {
-    @content;
-  }
-}
-
 html {
   font-size: 100%;
   position: relative;
   scroll-behavior: smooth;
+}
+
+h1, h2, h3, h4, h5, h6, p {
+  margin-top: 0;
+}
+
+del {
+  text-decoration: line-through;
+}
+
+blockquote {
+  position: relative;
+  width: fit-content;
+  margin: unset;
+  padding: .75rem 3rem .5rem 2.25rem;
+
+  &::before {
+    position: absolute;
+    content: open-quote;
+    font-size: 2.5rem;
+    line-height: 0;
+    color: $color-gray-2;
+    top: 1rem;
+    left: .5rem;
+  }
+
+  &::after {
+    position: absolute;
+    content: close-quote;
+    line-height: 0;
+    font-size: 2.5rem;
+    color: $color-gray-2;
+    bottom: 0;
+    right: 1rem;
+  }
+}
+
+ul {
+  list-style-type: none;
+  padding-left: 0;
+  margin-top: 0;
+
+  li {
+    li {
+      padding-left: 1rem;
+    }
+  }
+}
+
+ol {
+  list-style-type: disc;
+  padding-left: 1.25rem;
+  margin-top: 0;
+}
+
+code {
+  padding: .25rem .5rem;
+}
+
+pre {
+  margin-top: 0;
+  padding: 1rem;
+  background-color: $color-gray-10;
+  overflow-x: auto;
 }
