--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -1,14 +1,64 @@
 @import 'Breakpoints';
 @import 'Colors';
 @import 'Fonts';
-@import "Scrollbar";
 @import "Normalize";
 @import "Spacings";
 
-html {
+*, *::before, *::after {
+  box-sizing: border-box;
+}
+
+html, body {
   font-size: 100%;
-  position: relative;
+  overflow-x: hidden;
+  overflow-y: visible;
   scroll-behavior: smooth;
+}
+
+
+header {
+  height: 50px;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: $color-primary;
+  z-index: 1000;
+
+  @include min-width("l") {
+    height: 70px;
+    font-size: 1rem;
+    padding-left: $spacing-xxl;
+    padding-right: $spacing-xxl;
+  }
+
+  [data-icon] {
+    @include min-width("l") {
+      font-size: 3rem;
+    }
+  }
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  padding: 90px $spacing-xxl;
+
+  section {
+    min-height: 100vh;
+  }
+}
+
+footer {
+  display: flex;
+  flex-direction: row;
+  bottom: 0;
+  width: 100%;
+  height: 120px;
+  background-color: $color-primary;
+  color: white;
+  padding: $spacing-s $spacing-xxl;
 }
 
 h1, h2, h3, h4, h5, h6, p {
