--- a/src/styles/Fonts.scss
+++ b/src/styles/Fonts.scss
@@ -26,7 +26,7 @@ body {
   }
 }
 
-h1 {
+/*h1 {
   font-family: 'Montserrat Variable', sans-serif;
   font-weight: 200;
 
@@ -49,7 +49,7 @@ h1 {
   @include min-width('xxl') {
     font-size: 5rem!important;
   }
-}
+}*/
 
 h2 {
   font-family: 'Montserrat Variable', sans-serif;
