--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -38,7 +38,7 @@ import Contact from "../components/Contact.astro";
     main {
       display: grid;
       gap: 1rem;
-      padding-top: 0px;
+      padding-top: 0;
       padding-bottom: 180px;
       font-size: 1rem;
       color: $color-white;
