--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,8 +2,8 @@
 
 ---
 
-<div>
-  Eckwerk Stuttgart Stierlenstraße 25 70327 Stuttgart Mail:
 
-  <a href="mailto:hallo@eckwerkstuttgart.de">hallo@eckwerkstuttgart.de</a>
-</div>
+Eckwerk Stuttgart <br/>
+Stierlenstraße 25, <br/>
+70327 Stuttgart <br/>
+Mail: <a href="mailto:hallo@eckwerkstuttgart.de">hallo@eckwerkstuttgart.de</a>
