--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,13 +6,33 @@ import Copyright from "./Copyright.astro";
 
 interface Props {
 	navigation: INavigation[];
+	navigationPostion: string;
 }
 
 const {navigation} = Astro.props;
+const {navigationPostion} = Astro.props;
 ---
 
 <footer>
-    <Contact/>
-    <Navigation navigation={navigation} navigationPostion="footer"/>
     <Copyright/>
+    <Contact/>
+    <ul>
+			{
+				navigation.map((item) => {
+					return (
+                  <li>
+                      <a
+                              href={
+																navigationPostion === "header" ? "#" + item.title : item.title
+															}
+                              data-href={item.title}
+                              aria-current="page"
+                      >
+												{item.title}
+                      </a>
+                  </li>
+					);
+				})
+			}
+    </ul>
 </footer>
