--- a/src/styles/GlobalStyling.scss
+++ b/src/styles/GlobalStyling.scss
@@ -10,117 +10,112 @@
 
 html, body {
   font-size: 90%;
-  overflow-x: hidden;
-  overflow-y: visible;
-  scroll-behavior: smooth;
 }
 
-
-header {
-  height: 50px;
-  width: 100%;
-  position: fixed;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+body {
   background-color: $color-primary;
-  z-index: 1000;
-
-  @include min-width("l") {
-    height: 70px;
-    font-size: 1rem;
-    padding-left: $spacing-xxl;
-    padding-right: $spacing-xxl;
-  }
-
-  [data-icon] {
-    @include min-width("l") {
-      font-size: 3rem;
-    }
-  }
-}
-
-main {
   display: flex;
   flex-direction: column;
-  padding: 90px $spacing-xxl;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100vw;
+  font-family: 'Source Sans Pro', sans-serif;
 
-  section {
-    min-height: 100vh;
-  }
-}
 
-footer {
-  display: flex;
-  flex-direction: row;
-  bottom: 0;
-  width: 100%;
-  height: 120px;
-  background-color: $color-primary;
-  color: white;
-  padding: $spacing-s $spacing-xxl;
-}
+  main {
+    display: grid;
+    gap: 1rem;
+    padding-top: 0;
+    padding-bottom: 180px;
+    color: $color-white;
+    font-size: .75rem;
 
-h1, h2, h3, h4, h5, h6, p {
-  margin-top: 0;
-}
+    @include min-width("xs") {
+      font-size: .75rem;
 
-del {
-  text-decoration: line-through;
-}
+    }
 
-blockquote {
-  position: relative;
-  width: fit-content;
-  margin: unset;
-  padding: .75rem 3rem .5rem 2.25rem;
+    @include min-width("s") {
+      font-size: 1rem;
+    }
 
-  &::before {
-    position: absolute;
-    content: open-quote;
-    font-size: 2.5rem;
-    line-height: 0;
-    color: $color-gray-2;
-    top: 1rem;
-    left: .5rem;
-  }
+    @include min-width("m") {
+      font-size: 1.1rem;
+    }
 
-  &::after {
-    position: absolute;
-    content: close-quote;
-    line-height: 0;
-    font-size: 2.5rem;
-    color: $color-gray-2;
-    bottom: 0;
-    right: 1rem;
-  }
-}
+    @include min-width("l") {
+      font-size: 1rem;
+    }
 
-ul {
-  list-style-type: none;
-  padding-left: 0;
-  margin-top: 0;
+    h1 {
+      font-size: 1.25rem;
+      margin: 0px;
 
-  li {
-    li {
-      padding-left: 1rem;
+      @include min-width("xs") {
+        font-size: 1.5rem;
+
+      }
+
+      @include min-width("s") {
+        font-size: 2.5rem;
+      }
+
+      @include min-width("m") {
+        font-size: 3.5rem;
+      }
+    }
+
+    [data-icon] {
+      font-size: 4rem;
+    }
+
+    @include min-width("xs") {
+      gap: 1rem;
+      font-size: 1.25rem;
+      [data-icon] {
+        font-size: 4rem;
+      }
+    }
+
+    @include min-width("s") {
+      gap: 1rem;
+      font-size: 1.25rem;
+      [data-icon] {
+        font-size: 6rem;
+      }
+    }
+
+    @include min-width("m") {
+      gap: 1rem;
+      font-size: 1.25rem;
+      [data-icon] {
+        font-size: 10rem;
+      }
+    }
+
+    @include min-width("l") {
+      gap: 2rem;
+      font-size: 1.25rem;
+      [data-icon] {
+        font-size: 12rem;
+      }
+    }
+
+    @include min-width("xl") {
+      gap: 5rem;
+      font-size: 1.75rem;
+      [data-icon] {
+        font-size: 13rem;
+      }
+    }
+
+    @include min-width("xxl") {
+      gap: 5rem;
+      font-size: 1.75rem;
+      [data-icon] {
+        font-size: 16rem;
+      }
     }
   }
-}
-
-ol {
-  list-style-type: disc;
-  padding-left: 1.25rem;
-  margin-top: 0;
-}
-
-code {
-  padding: .25rem .5rem;
-}
-
-pre {
-  margin-top: 0;
-  padding: 1rem;
-  background-color: $color-gray-10;
-  overflow-x: auto;
 }
