Change maintained text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import Contact from "../components/Contact.astro";
 <Layout title="Eckwerk Stuttgart">
     <main>
         <Icon name="logo2"/>
-        <h1>Wir renovieren momentan.</h1>
+        <h1>Wir renovieren momentan für Sie und sind bald <br/> zurück.</h1>
         <Contact/>
     </main>
 </Layout>
